Fix alignment in navigation

--- a/client/sass/layout/navigation.scss
+++ b/client/sass/layout/navigation.scss
@@ -6,7 +6,10 @@
 .nav {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 1.2rem 2rem;
+  max-width: 97.5rem;
+  width: 100%;
 
   &__logo img {
     height: 2.9rem;
